Single year, no ncont, node type view (horizontal bar chart)
